WhatsCooking
Last login: Sat Jul 25 00:39:12 on ttys000
adnanmalik@adnans-MBP ~ % public class VariableDemo{
public static void main(String[] args){
System.out.println("Hello learning Data Types in Java");
// How many phone due you have?
int numberOfPhone = 2;
int numerOfLaptops = 2;
// Value of total gadagate = 4
int totalGadagets = numberOfPhone + numerOfLaptops;
// Please print in the console whatever inside the double quotation " "
System.out.println("Total Gadget of Jahidul " + totalGadagets );
    }
}
zsh: parse error near `}'
adnanmalik@adnans-MBP ~ % 
adnanmalik@adnans-MBP ~ % 
  [Restored Jul 25, 2020 at 12:09:24 PM]
Last login: Sat Jul 25 12:09:21 on console
adnanmalik@adnans-MBP ~ % touch HelloWorld
adnanmalik@adnans-MBP ~ %  nano HelloWorld
adnanmalik@adnans-MBP ~ % ls
Applications	Downloads	Movies		Public		psql
Desktop		HelloWorld	Music		StudyTime.java
Documents	Library		Pictures	logfile
adnanmalik@adnans-MBP ~ % cd StudyTime
cd: no such file or directory: StudyTime
adnanmalik@adnans-MBP ~ % cd StudyTime.java
cd: not a directory: StudyTime.java
adnanmalik@adnans-MBP ~ % StudyTime.java
zsh: command not found: StudyTime.java
adnanmalik@adnans-MBP ~ % javac StudyTime.java
StudyTime.java:1: error: class, interface, or enum expected
time to study!
^
1 error
adnanmalik@adnans-MBP ~ % java StudyTime 
Error: Could not find or load main class StudyTime
Caused by: java.lang.ClassNotFoundException: StudyTime
adnanmalik@adnans-MBP ~ % java StudyTime
Error: Could not find or load main class StudyTime
Caused by: java.lang.ClassNotFoundException: StudyTime
adnanmalik@adnans-MBP ~ % ls
Applications	Downloads	Movies		Public		psql
Desktop		HelloWorld	Music		StudyTime.java
Documents	Library		Pictures	logfile
adnanmalik@adnans-MBP ~ % drop StudyTime.java
zsh: command not found: drop
adnanmalik@adnans-MBP ~ % DROP StudyTime.java
zsh: command not found: DROP
adnanmalik@adnans-MBP ~ % rm StudyTime.java
adnanmalik@adnans-MBP ~ % ls
Applications	Downloads	Movies		Public
Desktop		HelloWorld	Music		logfile
Documents	Library		Pictures	psql
adnanmalik@adnans-MBP ~ % rm HelloWorld 
adnanmalik@adnans-MBP ~ % ls
Applications	Downloads	Music		logfile
Desktop		Library		Pictures	psql
Documents	Movies		Public
adnanmalik@adnans-MBP ~ % touch WhatsCooking
adnanmalik@adnans-MBP ~ % nano WhatsCooking

  GNU nano 2.0.6             File: WhatsCooking                       Modified  

Biryani! Samosas! Burgers!


















                        [ XOFF ignored, mumble mumble ]
^G Get Help  ^O WriteOut  ^R Read File ^Y Prev Page ^K Cut Text  ^C Cur Pos
^X Exit      ^J Justify   ^W Where Is  ^V Next Page ^U UnCut Text^T To Spell
